予想パート２を修正

--- a/app/views/part_one_predicts/index.html.erb
+++ b/app/views/part_one_predicts/index.html.erb
@@ -2,10 +2,10 @@
   <%=form_tag(regist_part_one_predicts_path) do |fm| %>
 
     <div class="row">
-      <div class="span6">
-        <h2>予想パート１</h2>
+      <div class="span8">
+        <h2>予想パート１　予選リーグを予想せよ</h2>
       </div>
-      <div class="span6" align="right">
+      <div class="span4" align="right">
         <%=submit_tag 'これで勝負する！', :class => 'btn btn-info' %>
       </div>
     </div>
