--- a/app/views/dashboard/_ranking.html.erb
+++ b/app/views/dashboard/_ranking.html.erb
@@ -1,6 +1,16 @@
 <h2>Ranking</h2>
-<ol>
-  <% (1..10).each_with_index do |i, j| %>
-    <li> 奥村剛士  (10)</li><br/>
+<ul class="unstyled">
+  <% upper = nil %>
+  <% rank = 1 %>
+  <% @users_ranked.each_with_index do |user, j| %>
+    <% if j == 0 %>
+      <% upper = user.total_point.to_i %>
+    <% else %>
+      <% if upper != user.total_point.to_i %>
+        <% upper = user.total_point.to_i %>
+        <% rank = rank + 1 %>
+      <% end %>
+    <% end %>
+    <li><%=rank%>.　<%=user.name%>  （ <%=user.total_point%> ）</li><br/>
   <% end %>
-</ol>
+</ul>
