--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -4,11 +4,24 @@
     <div class="span2 well">
       <%= render :partial => "ranking" %>
     </div>
-    <div class="span6 well">
-      <%= render :partial => "result" %>
-    </div>
-    <div class="span2 well">
-      <%= render :partial => "ranking_countory" %>
+    <div class="span8 well">
+      <h2>Result</h2>
+      <ul class="nav nav-tabs">
+        <li class="active">
+          <a href="#part_1" data-toggle="tab">予想パート１</a>
+        </li>
+        <li>
+          <a href="#part_2" data-toggle="tab">予想パート２</a>
+        </li>
+      </ul>
+      <div class="tab-content">
+        <div class="tab-pane fade active in" id="part_1">
+          <%= render :partial => "result_part_1" %>
+        </div>
+        <div class="tab-pane fade" id="part_2">
+          <%= render :partial => "result_part_2" %>
+        </div>
+      </div>
     </div>
   </div>
 </div>
