--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -32,7 +32,15 @@
               <ul class="dropdown-menu" id="swatch-menu">
                 <li><%= link_to 'パート１：リーグ戦を予想', part_one_predicts_path %></li>
                 <li><%= link_to 'パート２：決勝トーナメント進出を予想', edit_part_two_predict_path(user.part_two_predict.id) %></li>
-                <li><%= link_to 'パート３：優勝・準優勝・３位を予想', '' %></li>
+                <li><%= link_to 'パート３：優勝・準優勝・３位を予想', '', :onclick => 'alert("いまつくってます")' %></li>
+              </ul>
+            </li>
+            <li class="dropdown">
+              <a class="dropdown-toggle" data-toggle="dropdown" href="#">みんなの予想が気になる<b class="caret"></b></a>
+              <ul class="dropdown-menu" id="swatch-menu">
+                <li><%= link_to 'パート１：リーグ戦を予想', overlook_part_one_predicts_path %></li>
+                <li><%= link_to 'パート２：決勝トーナメント進出を予想', '', :onclick => 'alert("いまつくってます")' %></li>
+                <li><%= link_to 'パート３：優勝・準優勝・３位を予想', '', :onclick => 'alert("いまつくってます")' %></li>
               </ul>
             </li>
             <li><a href="<%=user_root_path%>">こんな情報ありまっせ</a></li>
@@ -44,8 +52,10 @@
             <li class="dropdown">
             <a class="dropdown-toggle" data-toggle="dropdown" href="#"><%=current_user.name%><b class="caret"></b></a>
             <ul class="dropdown-menu" id="swatch-menu">
-              <li><a href="../default/">Default</a></li>
-              <li class="divider"></li>
+              <% if current_user.account == "tokumura" %>
+                <li><%= link_to 'Match', matches_path %></li>
+                <li><%= link_to 'Part2 Result', part_two_results_path %></li>
+              <% end %>
               <li><%= link_to 'ログアウト', destroy_user_session_path, :method => :delete %></li>
             </ul>
             </li>
