--- a/app/views/information/_form.html.erb
+++ b/app/views/information/_form.html.erb
@@ -12,15 +12,16 @@
   <% end %>
 
   <div class="field">
-    <%= f.label :title %><br />
-    <%= f.text_field :title %>
+    タイトル<br/>
+    <%= f.text_field :title, :style => "width:500px;" %>
   </div>
   <div class="field">
-    <%= f.label :infobody %><br />
-    <%= f.text_area :infobody %>
+    本文<br/>
+    <%= f.text_area :infobody, :style => "width:800px;" %>
   </div>
   <%= f.hidden_field :informant %>
   <div class="actions">
-    <%= f.submit %>
+    <%= f.submit '登　録', :class => "btn btn-success" %>　
+    <%= link_to '一覧に戻る', information_index_path, :class => 'btn btn-info' %>
   </div>
 <% end %>
