--- a/app/views/information/index.html.erb
+++ b/app/views/information/index.html.erb
@@ -6,7 +6,7 @@
   <div class="span4">
     <div align="right">
       <br/>
-      <%= link_to '情報提供する', new_information_path, :class => "btn btn-info" %>
+      <%= link_to '投稿する', new_information_path, :class => "btn btn-info" %>
     </div>
   </div>
 </div>
