--- a/app/views/information/index.html.erb
+++ b/app/views/information/index.html.erb
@@ -1,7 +1,7 @@
 
 <div class="row">
   <div class="span8">
-    <h2>みんなの掲示板</h2>
+    <h2>３ちゃんねる</h2>
   </div>
   <div class="span4">
     <div align="right">
