--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -43,7 +43,7 @@
                 <li><%= link_to 'パート３：優勝・準優勝・３位', '', :onclick => 'alert("近日開設！")' %></li>
               </ul>
             </li>
-            <li><%= link_to 'みんなの掲示板', information_index_path %></li>
+            <li><%= link_to '３ちゃんねる', information_index_path %></li>
           </ul>
           <% if current_user %>
           <ul class="nav pull-right" id="main-menu-right">
