Newsを追加。更新アラート追加。

--- a/app/views/dashboard/_result_part_2.html.erb
+++ b/app/views/dashboard/_result_part_2.html.erb
@@ -1,3 +1,5 @@
+<h2>Result</h2>
+<h5 style="color:#dc143c">※６/１４（金）の１７：３０に締め切りますのでご注意を！</h5>
 <h3>Group A</h3>
 <%
   user = User.find(current_user.id)
