みんなの予想（予想パート２）を追加。スマフォ対応着手

--- a/app/assets/stylesheets/custom_bootstrap.css
+++ b/app/assets/stylesheets/custom_bootstrap.css
@@ -8,3 +8,21 @@ body {
   -moz-background-size:cover;
   background-size:cover;
 }
+
+body.mob {
+  padding-top: 10px;
+}
+
+.container-mob {
+  margin-left: 30px;
+}
+
+img {
+  max-width: 100%;
+  max-height: auto;
+}
+
+iframe {
+  max-width: 100%;
+  height: auto;
+}
