--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,69 +2,100 @@
 <html>
 <head>
   <title>Confederations2013</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <%= stylesheet_link_tag    "application", :media => "all" %>
   <%= javascript_include_tag "application" %>
   <%= csrf_meta_tags %>
 </head>
 
 <% if request.path_info == user_session_path %>
-<body class="signin">
+  <% if User.check_user_agent(request) == 'D' %>
+    <body class="signin">
+  <% else %>
+    <body class="mob">
+  <% end %>
 <% else %>
 <body>
 <% end %>
 
 <% if current_user %>
   <% user = User.find(current_user.id) %>
-  <div class="navbar navbar-fixed-top">
-    <div class="navbar-inner">
-      <div class="container">
-        <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-        </a>
-        <a class="brand" href="../">コンフェデ杯2013</a>
-        <div class="nav-collapse collapse" id="main-menu">
-          <ul class="nav" id="main-menu-left">
-            <li><a href="<%=user_root_path%>">ダッシュボード</a></li>
-            <li class="dropdown">
-              <a class="dropdown-toggle" data-toggle="dropdown" href="#">予想する<b class="caret"></b></a>
-              <ul class="dropdown-menu" id="swatch-menu">
-                <li><%= link_to 'パート１：予選リーグを予想', part_one_predicts_path %></li>
-                <li><%= link_to 'パート２：決勝トーナメント進出を予想', edit_part_two_predict_path(user.part_two_predict.id) %></li>
-                <li><%= link_to 'パート３：優勝・準優勝・３位を予想', '', :onclick => 'alert("近日開設！")' %></li>
-              </ul>
-            </li>
-            <li class="dropdown">
-              <a class="dropdown-toggle" data-toggle="dropdown" href="#">みんなの予想<b class="caret"></b></a>
-              <ul class="dropdown-menu" id="swatch-menu">
-                <li><%= link_to 'パート１：予選リーグ', overlook_part_one_predicts_path %></li>
-                <li><%= link_to 'パート２：決勝トーナメント進出', '', :onclick => 'alert("もうすぐできますヾ( ﾟ∀ﾟ)ﾉﾞ")' %></li>
-                <li><%= link_to 'パート３：優勝・準優勝・３位', '', :onclick => 'alert("近日開設！")' %></li>
-              </ul>
-            </li>
-            <li><%= link_to '３ちゃんねる', information_index_path %></li>
-          </ul>
-          <% if current_user %>
-          <ul class="nav pull-right" id="main-menu-right">
-            <li>
-            </li>
-            <li class="dropdown">
-            <a class="dropdown-toggle" data-toggle="dropdown" href="#"><%=current_user.name%><b class="caret"></b></a>
-            <ul class="dropdown-menu" id="swatch-menu">
-              <% if current_user.account == "tokumura" %>
-                <li><%= link_to 'Match', matches_path %></li>
-                <li><%= link_to 'Part2 Result', part_two_results_path %></li>
-              <% end %>
-              <li><%= link_to 'ログアウト', destroy_user_session_path, :method => :delete %></li>
+  <% if User.check_user_agent(request) == "D" %>
+    <div class="navbar navbar-fixed-top">
+      <div class="navbar-inner">
+        <div class="container container-mob">
+          <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </a>
+          <a class="brand" href="<%=user_root_path%>">コンフェデ杯2013</a>
+          <div class="nav-collapse collapse" id="main-menu">
+            <ul class="nav" id="main-menu-left">
+              <li><a href="<%=user_root_path%>">ダッシュボード</a></li>
+              <li class="dropdown">
+                <a class="dropdown-toggle" data-toggle="dropdown" href="#">予想する<b class="caret"></b></a>
+                <ul class="dropdown-menu" id="swatch-menu">
+                  <li><%= link_to 'パート１：予選リーグを予想', part_one_predicts_path %></li>
+                  <li><%= link_to 'パート２：決勝トーナメント進出を予想', edit_part_two_predict_path(user.part_two_predict.id) %></li>
+                  <li><%= link_to 'パート３：優勝・準優勝・３位を予想', '', :onclick => 'alert("近日開設！")' %></li>
+                </ul>
+              </li>
+              <li class="dropdown">
+                <a class="dropdown-toggle" data-toggle="dropdown" href="#">みんなの予想<b class="caret"></b></a>
+                <ul class="dropdown-menu" id="swatch-menu">
+                  <li><%= link_to 'パート１：予選リーグ', overlook_part_one_predicts_path %></li>
+                  <li><%= link_to 'パート２：決勝トーナメント進出', overlook_part_two_predicts_path %></li>
+                  <li><%= link_to 'パート３：優勝・準優勝・３位', '', :onclick => 'alert("近日開設！")' %></li>
+                </ul>
+              </li>
+              <li><%= link_to '３ちゃんねる', information_index_path %></li>
             </ul>
-            </li>
-          </ul>
-          <% end %>
+            <% if current_user %>
+            <ul class="nav pull-right" id="main-menu-right">
+              <li>
+              </li>
+              <li class="dropdown">
+              <a class="dropdown-toggle" data-toggle="dropdown" href="#"><%=current_user.name%><b class="caret"></b></a>
+              <ul class="dropdown-menu" id="swatch-menu">
+                <% if current_user.account == "tokumura" %>
+                  <li><%= link_to 'Match', matches_path %></li>
+                  <li><%= link_to 'Part2 Result', part_two_results_path %></li>
+                <% end %>
+                <li><%= link_to 'ログアウト', destroy_user_session_path, :method => :delete %></li>
+              </ul>
+              </li>
+            </ul>
+            <% end %>
+          </div>
         </div>
       </div>
     </div>
-  </div>
+  <% else %>
+    <div class="navbar navbar-inverse navbar-fixed-top">
+      <div class="navbar-inner">
+        <div class="container">
+          <div class="nav-collapse collapse">
+            <ul class="nav">
+              <li class=""><a href="http://mawatari.jp/">Sanei Confede2013　　</a></li>
+            </ul>
+            <ul class="nav pull-right" id="maim-menu-right">
+              <li class="dropdown">
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+                <i class="icon-user icon-white"></i><%=user.name%><span class="caret"></span>
+              </a>
+              <ul class="dropdown-menu">
+                <li>
+                  <%= link_to 'ログアウト', destroy_user_session_path, :method => :delete %></li>
+                </li>
+              </ul>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </div>
+  <% end %>
 <% end %>
 
 <div class="container">
