--- a/app/assets/stylesheets/custom_bootstrap.css
+++ b/app/assets/stylesheets/custom_bootstrap.css
@@ -2,6 +2,7 @@ body {
   padding-top: 70px;
 }
 .signin {
+  padding-top: 40px;
   background-image: url(../img/cup.jpg);
   background-position:center top;
   background-repeat:no-repeat;
