--- a/app/views/dashboard/_result_part_1.html.erb
+++ b/app/views/dashboard/_result_part_1.html.erb
@@ -13,6 +13,8 @@
     <% score = "　ー　" %>
     <% if m.done %>
       <% score = m.score_a.to_s + " ー " + m.score_b.to_s %>
+    <% elsif m.close_flg %>
+      <% score = "　ー　" %>
     <% end %>
     <tr>
       <td style="border-right: solid 1px #ddd;"><%=m.day%></td>
