--- a/app/views/matches/_form.html.erb
+++ b/app/views/matches/_form.html.erb
@@ -43,6 +43,10 @@
     <%= f.label :done %>
     <%= f.check_box :done %>
   </div>
+  <div class="field">
+    <%= f.label :close_flg %>
+    <%= f.check_box :close_flg %>
+  </div>
   <div class="actions">
     <%= f.submit %>
   </div>
