--- a/app/views/matches/_form.html.erb
+++ b/app/views/matches/_form.html.erb
@@ -40,12 +40,12 @@
     <%= f.number_field :score_b %>
   </div>
   <div class="field">
-    <%= f.label :done %>
-    <%= f.check_box :done %>
+    <%= f.label :game_status %>
+    <%= f.text_field :game_status %>
   </div>
   <div class="field">
-    <%= f.label :close_flg %>
-    <%= f.check_box :close_flg %>
+    <%= f.label :done %>
+    <%= f.check_box :done %>
   </div>
   <div class="actions">
     <%= f.submit %>
