--- a/app/views/matches/index.html.erb
+++ b/app/views/matches/index.html.erb
@@ -7,7 +7,7 @@
     <th>Score a</th>
     <th>Team b</th>
     <th>Score b</th>
-    <th>Close</th>
+    <th>Status</th>
     <th>Done</th>
     <th></th>
     <th></th>
@@ -21,7 +21,7 @@
     <td><%= match.score_a %></td>
     <td><%= match.team_b %></td>
     <td><%= match.score_b %></td>
-    <td><%= match.close_flg %></td>
+    <td><%= match.game_status %></td>
     <td><%= match.done %></td>
     <td><%= link_to 'Show', match %></td>
     <td><%= link_to 'Edit', edit_match_path(match) %></td>
