--- a/app/views/dashboard/_desktop.html.erb
+++ b/app/views/dashboard/_desktop.html.erb
@@ -5,29 +5,53 @@
       <%= render :partial => "ranking" %>
     </div>
     <div class="span8 well">
-      <ul class="nav nav-tabs">
-        <li class="active">
-          <a href="#news" data-toggle="tab">　新着情報　</a>
-        </li>
-        <li class="">
-          <a href="#part_1" data-toggle="tab">予想パート１</a>
-        </li>
-        <li>
-          <a href="#part_2" data-toggle="tab">予想パート２</a>
-        </li>
-      </ul>
-      <div class="tab-content">
-        <div class="tab-pane fade active in" id="news">
+      <div class="row">
+        <div class="span7 well">
           <%= render :partial => "news" %>
         </div>
-        <div class="tab-pane fade" id="part_1">
-          <%= render :partial => "result_part_1" %>
-        </div>
-        <div class="tab-pane fade" id="part_2">
-          <%= render :partial => "result_part_2" %>
+      </div>
+      <div class="row">
+        <div class="span7 well">
+          <ul class="nav nav-tabs">
+            <li class="active">
+              <a href="#highlight" data-toggle="tab">ハイライト</a>
+            </li>
+            <li class="">
+              <a href="#part_1" data-toggle="tab">予想パート１</a>
+            </li>
+            <li>
+              <a href="#part_2" data-toggle="tab">予想パート２</a>
+            </li>
+          </ul>
+          <div class="tab-content">
+            <div class="tab-pane fade active in" id="highlight">
+              <%= render :partial => "highlight" %>
+            </div>
+            <div class="tab-pane fade" id="part_1">
+              <%= render :partial => "result_part_1" %>
+            </div>
+            <div class="tab-pane fade" id="part_2">
+              <%= render :partial => "result_part_2" %>
+            </div>
+          </div>
         </div>
       </div>
     </div>
   </div>
 </div>
+
+<script type="text/javascript">
+  <!--
+  jQuery(function( $ ) {
+    // #youtubeに動画を埋め込む例
+    $('#youtube').youtubeGallery( {
+      width: '480', // 動画の横幅（半角数字）
+      height: '320', // 動画の高さ（半角数字）
+      speed: '1000', // フェードのスピード（半角数字）
+      urls:['http://www.youtube.com/watch?v=R3CwKn-OzrM'
+           ] // YouTubeの動画のURLのリスト
+    } );
+  } );
+  // -->
+</script>
 
