--- a/app/views/dashboard/_highlight.html.erb
+++ b/app/views/dashboard/_highlight.html.erb
@@ -1,3 +1,5 @@
-<h4>Brazil 3 - 0 Japan (Group A)</h4>
-<iframe width="560" height="315" src="http://www.youtube.com/embed/LrD8uUusEjQ" frameborder="0" allowfullscreen></iframe>
+<% @highlights.each do |h| %>
+  <h4><%=h.title%></h4>
+  <iframe width="560" height="315" src="<%=h.video_url%>" frameborder="0" allowfullscreen></iframe>
+<% end %>
 
