--- a/app/views/part_two_predicts/overlook.html.erb
+++ b/app/views/part_two_predicts/overlook.html.erb
@@ -8,7 +8,7 @@
           <td style="width:20%"></td>
           <td colspan="4" style="width:30%; text-align:center;">Group A</td>
           <td colspan="4" style="width:30%; text-align:center;">Group B</td>
-          <td style="width:20%; text-align:center;">獲得ポイント</td>
+          <td style="width:10%; text-align:center;">獲得pt</td>
         </tr>
       </thead>
       <tbody>
@@ -24,7 +24,7 @@
           <td style="text-align:center;"><img src="../img/nigeria.jpg" style="width:30px; height:20px;"></td>
           <td></td>
         </tr>
-        <tr>
+        <tr class="success">
           <td>これが現実</td>
           <td></td>
           <td></td>
@@ -48,7 +48,7 @@
               <td></td>
             <% end %>
           <% end %>
-          <td></td>
+          <td style="text-align:center;"><%#PartTwoPredict.calc(p)%></td>
         </tr>
       <% end %>
       </tbody>
