--- a/app/views/part_two_predicts/overlook.html.erb
+++ b/app/views/part_two_predicts/overlook.html.erb
@@ -26,9 +26,9 @@
         </tr>
         <tr class="success">
           <td>これが現実</td>
+          <td style="text-align:center;"><i class="icon-star"></i></td>
           <td></td>
-          <td></td>
-          <td></td>
+          <td style="text-align:center;"><i class="icon-star"></i></td>
           <td></td>
           <td></td>
           <td></td>
