--- a/app/views/part_two_predicts/overlook.html.erb
+++ b/app/views/part_two_predicts/overlook.html.erb
@@ -48,7 +48,7 @@
               <td></td>
             <% end %>
           <% end %>
-          <td style="text-align:center;"><%#PartTwoPredict.calc(p)%></td>
+          <td style="text-align:center;"><%=PartTwoPredict.calc(p)%></td>
         </tr>
       <% end %>
       </tbody>
